--- a/src/UI/App.module.css
+++ b/src/UI/App.module.css
@@ -1,39 +1,42 @@
 body{
   font-family: 'Poppins', sans-serif;
-  background: rgb(41,163,243);
-  background: linear-gradient(180deg, rgba(41,163,243,0.9714910256094625) 0%, rgba(81,228,225,0.8958607735086221) 33%, rgba(55,241,90,0.7950204373741684) 56%, rgba(114,243,91,0.9322753393349528) 80%, rgba(175,245,34,0.9462809415758491) 100%);
-  height: 88vh;
+ background-color: rgb(140 255 139);
+  height: 100vh;
 }
-h2{
-  color:rgb(255, 255, 255);
-  font-size: 34px;  
-}
-h3{
-  margin-top: -1rem;
+h1,
+h4{
   color: white;
-  letter-spacing: .2rem;
+  margin: 0;
+}
+.container{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card {
   box-shadow: 0 5px 12px rgba(0,0,0,0.26);
   border-radius: 6px;
-  margin: 4rem auto;
-  padding: .2rem .2rem .2rem;
-  padding-bottom: 1rem;
-  width: 80%;
-  max-width: 40rem;
-  background: rgb(41,163,243);
-background: linear-gradient(360deg, rgba(41,163,243,0.9714910256094625) 0%, rgba(81,228,225,0.8958607735086221) 33%, rgba(55,241,90,0.7950204373741684) 56%, rgba(114,243,91,0.9322753393349528) 80%, rgba(175,245,34,0.9462809415758491) 100%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 30px 40px 40px 40px;
+  max-width: 70%;
+  min-width: 60%;
+  background: linear-gradient(360deg, rgba(41,163,243,0.9714910256094625) 0%, rgba(81,228,225,0.8958607735086221) 33%, rgba(55,241,90,0.7950204373741684) 56%, rgba(114,243,91,0.9322753393349528) 80%, rgba(175,245,34,0.9462809415758491) 100%);
   
 }
 .catBtn {
   display:flex;
   justify-content: center;
+  gap: 20px;
   
 }
 .catBtn button {
-  align-content: center;
-  margin-right: 1rem;;
-  padding: .5rem 1rem  ;
+  
+  
+  padding:10px 20px  ;
   color: white;
   font-size: 16px;
   background-color: rgb(85, 182, 242);
