--- a/src/UI/TriviaQue.module.css
+++ b/src/UI/TriviaQue.module.css
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,400&display=swap');
 
 .card {
-    padding: 2rem 3rem ;  
-    font-family: 'Poppins', sans-serif;
-  }
-.container {
+  font-family: 'Poppins', sans-serif;
   display: flex;
   justify-content: space-between;
+}
+.container {
+  padding: 10px 20px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;  
+  gap: 10px;
   color:rgb(255, 255, 255);
   font-size: 16px;
 }
